--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "powerbi-visuals-sunburst",
   "description": "SunBurst chart.",
-  "version": "2.5.1.0",
+  "version": "2.5.2.0",
   "author": {
     "name": "Microsoft",
     "email": "pbicvsupport@microsoft.com"
@@ -50,7 +50,7 @@
     "less-loader": "^12.2.0",
     "playwright-chromium": "^1.44.1",
     "postcss-less": "^6.0.0",
-    "powerbi-visuals-tools": "^5.4.3",
+    "powerbi-visuals-tools": "^5.5.1",
     "powerbi-visuals-utils-testutils": "^6.1.1",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.1",
@@ -60,7 +60,7 @@
     "d3-hierarchy": "^3.1.2",
     "d3-selection": "^3.0.0",
     "d3-shape": "^3.2.0",
-    "powerbi-visuals-api": "~5.9.1",
+    "powerbi-visuals-api": "^5.11.0",
     "powerbi-visuals-utils-chartutils": "^6.0.4",
     "powerbi-visuals-utils-colorutils": "^6.0.4",
     "powerbi-visuals-utils-dataviewutils": "^6.1.0",
