--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "powerbi-visuals-sunburst",
   "description": "SunBurst chart.",
-  "version": "2.5.1.0",
+  "version": "2.6.0.0",
   "author": {
     "name": "Microsoft",
     "email": "pbicvsupport@microsoft.com"
@@ -28,15 +28,15 @@
     "@types/jasmine": "^5.1.4",
     "@types/karma": "^6.3.8",
     "@types/webpack": "5.28.5",
-    "@typescript-eslint/eslint-plugin": "^7.12.0",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
     "css-loader": "^7.1.2",
     "eslint": "^8.57.0",
     "eslint-plugin-powerbi-visuals": "^0.8.1",
-    "jasmine": "^5.1.0",
-    "jasmine-core": "^5.1.2",
+    "jasmine": "^5.3.0",
+    "jasmine-core": "^5.3.0",
     "jasmine-jquery": "^2.1.1",
     "jquery": "^3.7.1",
-    "karma": "^6.4.3",
+    "karma": "^6.4.4",
     "karma-chrome-launcher": "^3.2.0",
     "karma-coverage": "^2.2.1",
     "karma-coverage-istanbul-reporter": "^3.0.3",
@@ -48,9 +48,9 @@
     "karma-webpack": "^5.0.1",
     "less": "^4.2.0",
     "less-loader": "^12.2.0",
-    "playwright-chromium": "^1.44.1",
+    "playwright-chromium": "^1.47.0",
     "postcss-less": "^6.0.0",
-    "powerbi-visuals-tools": "^5.4.3",
+    "powerbi-visuals-tools": "^5.5.1",
     "powerbi-visuals-utils-testutils": "^6.1.1",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.1",
@@ -60,12 +60,12 @@
     "d3-hierarchy": "^3.1.2",
     "d3-selection": "^3.0.0",
     "d3-shape": "^3.2.0",
-    "powerbi-visuals-api": "~5.9.1",
-    "powerbi-visuals-utils-chartutils": "^6.0.4",
-    "powerbi-visuals-utils-colorutils": "^6.0.4",
+    "powerbi-visuals-api": "^5.11.0",
+    "powerbi-visuals-utils-chartutils": "^7.0.0",
+    "powerbi-visuals-utils-colorutils": "^6.0.5",
     "powerbi-visuals-utils-dataviewutils": "^6.1.0",
-    "powerbi-visuals-utils-formattingmodel": "^6.0.2",
-    "powerbi-visuals-utils-formattingutils": "^6.1.1",
+    "powerbi-visuals-utils-formattingmodel": "^6.0.4",
+    "powerbi-visuals-utils-formattingutils": "^6.1.2",
     "powerbi-visuals-utils-svgutils": "^6.0.4",
     "powerbi-visuals-utils-tooltiputils": "^6.0.4",
     "powerbi-visuals-utils-typeutils": "^6.0.3"
